(library
 (public_name semgrep.semgrep_js_shared)
 (name semgrep_js_shared)
 (wrapped false)
 (libraries
   js_of_ocaml
   libyaml_stubs_js
   integers_stubs_js
   libpcre_stubs_js
   yaml_ctypes_overrides
   semgrep.parsing
   semgrep.data
 )
 (js_of_ocaml
  (javascript_files
    ocaml-tree-sitter.js
    core.js ; misc libraries
    unix.js
 ))
 (preprocess
  (pps js_of_ocaml-ppx)))
