(env
; we disable shortvar (Shorten variable names) and share (Share string and number constants)
; to make debugging the generated code easier
 (js_of_ocaml (flags -no-inline -debug-info --disable shortvar --disable share)))

(executable
 (name test_jsoo)
 (libraries
   js_of_ocaml
   semgrep.semgrep_js_shared
   semgrep.engine
   integers_stubs_js
   libpcre_stubs_js
   libyaml_stubs_js
   alcotest
   semgrep.language_server
  lwt_platform.js
  alcotest-lwt
  cohttp-lwt-jsoo
 )
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx lwt_ppx)))
